aws-db-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: dev
spec:
  type: ExternalName
  externalName: aws.jumjoo.com
