azure-db-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: dev
spec:
  type: ExternalName
  externalName: 10.1.2.101
