was-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: was-svc
spec:
  selector:
    app: was
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
